<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="choose_play_mode">Choose your play mode</string>
    <string name="with_ai">WITH AI</string>
    <string name="with_friend">WITH A FRIEND</string>
    <string name="content_desc_logo">Tic Tac Toe Logo</string>
    <string name="content_desc_settings">Settings</string>
    <string name="app_title">Tic Tac Toe</string>
    <string name="app_version">ver.1.0.0</string>
    <string name="difficulty">Difficulty</string>
    <string name="vibration">Vibration</string>
    <string name="no_ads">No Ads</string>
    <string name="rating_app">Rating app</string>
    <string name="feedback">Feedback</string>
    <string name="easy">Easy</string>
    <string name="random">Random</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="impossible">Impossible</string>
    <string name="exit_question">Do you want to exit?</string>
    <string name="exit_game_question">Do you want to leave?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="back">Back</string>
    <string name="whatsapp_support">WhatsApp Support</string>
    <string name="support_title">ICC</string>
    <string name="video_call">Video Call</string>
    <string name="phone_call">Phone Call</string>
    <string name="more_options">More options</string>
</resources>