<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_background"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvHeaderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/app_name"
            android:textColor="@color/dark_navy"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btnHeaderSettings"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="26dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeWidth="0dp">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:contentDescription="@string/content_desc_settings"
                android:src="@drawable/ic_settings_gear" />

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:layout_marginTop="80dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/content_desc_logo"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout" />

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/choose_play_mode"
        android:textColor="@color/dark_navy"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnWithAI"
        style="@style/Widget.Material3.Button"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_marginTop="90dp"
        android:elevation="4dp"
        android:text="@string/with_ai"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/primary_blue"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnWithFriend"
        style="@style/Widget.Material3.Button"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:elevation="4dp"
        android:text="@string/with_friend"
        android:textColor="@color/dark_navy"
        android:textSize="18sp"
        app:backgroundTint="@color/white"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWithAI" />


</androidx.constraintlayout.widget.ConstraintLayout>